tests/src/test/scala/annotations/neg/macro-annotation-cyclic-b.check
Test_2.scala:1: error: illegal cyclic reference involving class C
class C {
      ^
one error found
